--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-
+<!DOCTYPE html>
+<html>
+  <head>
+    <link rel="stylesheet" href="style.css" />
+    <title>Doporučené programy</title>
+  </head>
+  <body style="background-color:#778899;">
+    <div style="background-color: #566D7E; color: #fff; padding: 10px; text-align: center;">
+      <span style="font-size: 24px;">Doporučené programy</span>
